[gd_scene load_steps=7 format=3 uid="uid://8tmvdaslxhy7"]

[ext_resource type="Script" path="res://menus/Challenges/challenges.gd" id="1_3s3xk"]
[ext_resource type="Material" uid="uid://dw5ry2b5wv5ra" path="res://RogueFroggerAssets/RFAssets/shaders/blur.tres" id="2_kqr38"]
[ext_resource type="Script" path="res://menus/Version.gd" id="2_ttkty"]
[ext_resource type="PackedScene" uid="uid://dfs4y1gaosswr" path="res://menus/GameUI/UI_Controls.tscn" id="3_y7hnf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_14lci"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rux6j"]

[node name="Challenges" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3s3xk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1588.0
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(1588.77, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="Desc" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/Desc"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Desc"]
layout_mode = 2
size_flags_vertical = 6

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer/Desc/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_14lci")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Desc/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Test"
vertical_alignment = 1
autowrap_mode = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/Desc/HBoxContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer/Desc/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_14lci")

[node name="HighScore" type="Label" parent="VBoxContainer/HBoxContainer/Desc"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "HighScore: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Selections" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/Selections"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_rux6j")

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/Selections"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Exit" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_left = NodePath("../Play")
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="Play" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_right = NodePath("../Exit")
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Block" type="Control" parent="."]
custom_minimum_size = Vector2(1500, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = -350.0
offset_right = 750.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blur" type="ColorRect" parent="Block"]
material = ExtResource("2_kqr38")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Black" type="ColorRect" parent="Block"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.870588)

[node name="Label" type="Label" parent="Block"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "You need to reach a High Score of 50 to access Challeneges!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_bottom = 26.0
grow_horizontal = 0
script = ExtResource("2_ttkty")
metadata/_edit_use_anchors_ = true

[node name="UiControls" parent="." instance=ExtResource("3_y7hnf")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
offset_left = -331.265
offset_top = -159.04
offset_right = 293.735
offset_bottom = 140.96
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.53, 0.53)

[node name="Navigate" parent="UiControls" index="0"]
alignment = 2

[node name="Accept" parent="UiControls" index="1"]
alignment = 2

[node name="Unpause" parent="UiControls" index="2"]
visible = false

[node name="Cancel Selection" parent="UiControls" index="3"]
alignment = 2

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/Selections/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Play" to="." method="_on_play_pressed"]

[editable path="UiControls"]
